# rust-on-nails

./: .gitignore  Cargo.toml  Earthfile
.devcontainer/: .bash_aliases  .env  Dockerfile  config  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
crates/asset-pipeline/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json
crates/asset-pipeline/components/: hello_world.ts
crates/asset-pipeline/src/: lib.rs
crates/asset-pipeline/templates/: page.rs.html
crates/axum-server/: Cargo.toml
crates/axum-server/src/: api_service.rs  authentification.rs  config.rs  email.rs  main.rs
crates/axum-server/tests/: config.rs  example_test.rs
crates/db/: Cargo.toml
crates/db/migrations/: 20230306042143_user_tables.sql
crates/db/src/: lib.rs
crates/grpc-api/: Cargo.toml  build.rs
crates/grpc-api/protos/: api.proto
crates/grpc-api/src/: lib.rs
crates/ui-components/src/: users.rs
infra-as-code/: Pulumi.yaml  cloudflare.ts  cluster-setup.ts  database.ts  index.ts  package-lock.json  package.json
